# trigivs

./: Cargo.toml  LICENSE.md  README.md
src/: alloc.rs  lib.rs  no_alloc.rs  solver_error.rs  solver_parts.rs  tests.rs
