[package]
name = "trigivs"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc", "num-traits/std"]
alloc = []

[dependencies]
num-traits = { version = "0.2.*", default-features = false, features = ["libm"]}
thiserror = {version = "2.0.*", default-features = false}

[dev-dependencies]
approx = "0.5.*"