[package]
description = "Rust library for solving tridiagonal systems of linear equations using Givens rotations"
name = "trigivs"
version = "0.1.1"
edition = "2024"

authors = ["Yuzariy"]
repository = "https://github.com/VoxeJ/trigivs"
license = "MIT"
readme = "README.md"

keywords = ["tridiagonal", "no_std", "linear", "equations", "solver"]
categories = ["mathematics", "algorithms"]

[features]
default = []
std = ["alloc", "num-traits/std"]
alloc = []

[dependencies]
num-traits = { version = "0.2.*", default-features = false, features = ["libm"]}
thiserror = {version = "2.0.*", default-features = false}

[dev-dependencies]
approx = "0.5.*"